--- a/organix.css
+++ b/organix.css
@@ -80,12 +80,21 @@
   color: #87898d;
 }
 
-.searchbar {
+form {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   column-gap: 0.89rem;
+}
+
+input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: #f0efee;
+  font-size: 1rem;
+  font-family: "Inter", sans-serif;
 }
 
 .searchrightICon {
@@ -141,6 +150,10 @@
   column-gap: 1rem;
   padding: 1rem;
   color: #87898d;
+}
+
+.iconMenu {
+  cursor: pointer;
 }
 
 .iconMenu:hover,
@@ -226,11 +239,18 @@
   align-items: center;
   column-gap: 0.5rem;
   font-weight: 600;
+  cursor: pointer;
+}
+
+.header-right .btn a:hover {
+  color: #fff;
+  background-color: #5959fd;
 }
 
 .header-right .alert i {
   font-size: 1.5rem;
   color: #1c1d1e;
+  cursor: pointer;
 }
 
 .header-right .photo {
@@ -264,6 +284,7 @@
   justify-content: flex-start;
   align-items: center;
   column-gap: 1.5rem;
+  cursor: pointer;
 }
 
 .navsubheader a {
@@ -308,6 +329,7 @@
   background-color: #ebe5ff;
   padding: 1.3rem 1.5rem;
   border-radius: 0.89rem;
+  cursor: pointer;
 }
 
 .main-head-box .main-txt p {
@@ -552,4 +574,27 @@
 
 .card-header .mak-color {
   color: #00b4cc;
+}
+
+/* ******************************************************************* */
+/* Tablets and Ipads Views */
+/* ******************************************************************* */
+@media screen and (max-width: 1120px) {
+  .aside-container {
+    width: 30%;
+  }
+
+  .main-content-head {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+  }
+  .main-cards {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
